Fixed code structure, specified sections readable

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,7 +1,6 @@
 * {
     box-sizing: border-box;
     padding: 0;
-    margin: 0;
 }
 
 body {
@@ -22,6 +21,7 @@ body {
 
 .header h1 .seo {
     color: #d9dcd6;
+    margin: 0;
 }
 
 .header div {
@@ -113,7 +113,7 @@ p {
 
 .benefit-cost h3 {
     margin-bottom: 10px;
-    text-align: right;
+    text-align: center;
 }
 
 .benefit-lead img {
